
Latest changes (mostly reverse chronological):
[correct wrt svn rev 4136]

Changes:

* Export of results in matrix form, e.g. for surface plots (-exportresultsmatrix)
* Can disable Prob0/Prob1 precomputation algorithms independently (-noprob0, -noprob1)
* Bash completion scripts + additional syntax highlighters
* Added PrismTest class to illustrate programmatic use of PRISM

Ongoing changes:

* Handling of verbosity/warnings in log
* Properties can be named, by prefixing with "name":, and reference each other
* CTL AG/EF

-----------------------------------------------------------------------------
Version 4.0.2 (released 9/10/2011)
-----------------------------------------------------------------------------

* Better handling of undefined constants in properties
* Added -exportprodtrans and -exportprodstates switches
* More improvements to explicit engine
* Simulator fix: ignores "max path length" for time-bounded properties
* Fixed to compile on Java 7
* Fixed anti-aliasing in GUI model editor
* Various bug fixes

-----------------------------------------------------------------------------
Version 4.0.1 (released 27/7/2011)
-----------------------------------------------------------------------------

* Added if-and-only-if operator (<=>) for use in models/properties
* Updated version of explicit model checking library
* Testing mode (-test and -testall switches)
* Various bug fixes

-----------------------------------------------------------------------------
Version 4.0 (released 28/6/2011)
-----------------------------------------------------------------------------

* Support for probabilistic timed automata (PTAs)
  - new modelling language features: clocks, invariants
  - model checking of timed/untimed probabilistic reachability properties
  - two model checking engines: abstraction-refinement, digital clocks
  - support for expected reward properties (i.e. priced PTAs)

* New approximate/statistical model checking functionality